--- a/libs/api-bot/api-bot.cabal
+++ b/libs/api-bot/api-bot.cabal
@@ -1,112 +1,114 @@
 cabal-version: 1.12
-
-
-name:           api-bot
-version:        0.4.2
-synopsis:       (Internal) API automation around wire-client
-description:    (Internal) API automation around the wire-client.
-category:       Network
-stability:      experimental
-author:         Wire Swiss GmbH
-maintainer:     Wire Swiss GmbH <backend@wire.com>
-license:        AGPL-3
-license-file:   LICENSE
-build-type:     Simple
+name:          api-bot
+version:       0.4.2
+synopsis:      (Internal) API automation around wire-client
+description:   (Internal) API automation around the wire-client.
+category:      Network
+stability:     experimental
+author:        Wire Swiss GmbH
+maintainer:    Wire Swiss GmbH <backend@wire.com>
+license:       AGPL-3
+license-file:  LICENSE
+build-type:    Simple
 
 library
   exposed-modules:
-      Network.Wire.Bot
-      Network.Wire.Bot.Assert
-      Network.Wire.Bot.Cache
-      Network.Wire.Bot.Clients
-      Network.Wire.Bot.Crypto
-      Network.Wire.Bot.Crypto.Glue
-      Network.Wire.Bot.Email
-      Network.Wire.Bot.Metrics
-      Network.Wire.Bot.Monad
-      Network.Wire.Bot.Report
-      Network.Wire.Bot.Report.Text
-      Network.Wire.Bot.Settings
-  other-modules:
-      Paths_api_bot
-  hs-source-dirs:
-      src
+    Network.Wire.Bot
+    Network.Wire.Bot.Assert
+    Network.Wire.Bot.Cache
+    Network.Wire.Bot.Clients
+    Network.Wire.Bot.Crypto
+    Network.Wire.Bot.Crypto.Glue
+    Network.Wire.Bot.Email
+    Network.Wire.Bot.Metrics
+    Network.Wire.Bot.Monad
+    Network.Wire.Bot.Report
+    Network.Wire.Bot.Report.Text
+    Network.Wire.Bot.Settings
+
+  other-modules:      Paths_api_bot
+  hs-source-dirs:     src
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+
   build-depends:
-      HaskellNet >=0.5
-    , HaskellNet-SSL >=0.3
-    , aeson >=2.0.1.0
-    , ansi-terminal >=0.6
+      aeson                  >=2.0.1.0
+    , ansi-terminal          >=0.6
     , api-client
-    , async >=2.0
-    , attoparsec >=0.13
-    , base >=4.6 && <5
-    , base64-bytestring >=1.0
-    , bilge >=0.21
-    , bytestring >=0.10
-    , bytestring-conversion >=0.2
-    , cereal >=0.5
-    , containers >=0.5
-    , cryptobox-haskell >=0.1.1
-    , cryptonite >=0.17
-    , exceptions >=0.8
-    , filepath >=1.3
-    , http-client >=0.4
+    , async                  >=2.0
+    , attoparsec             >=0.13
+    , base                   >=4.6     && <5
+    , base64-bytestring      >=1.0
+    , bilge                  >=0.21
+    , bytestring             >=0.10
+    , bytestring-conversion  >=0.2
+    , cereal                 >=0.5
+    , containers             >=0.5
+    , cryptobox-haskell      >=0.1.1
+    , cryptonite             >=0.17
+    , exceptions             >=0.8
+    , filepath               >=1.3
+    , HaskellNet             >=0.5
+    , HaskellNet-SSL         >=0.3
+    , http-client            >=0.4
     , imports
-    , iso639 >=0.1
-    , memory >=0.12
-    , metrics-core >=0.1.17
-    , mime >=0.4
-    , monad-control >=1.0
-    , mwc-random >=0.13
-    , optparse-applicative >=0.11
-    , resource-pool >=0.2
-    , stm >=2.4
-    , text >=0.11
-    , time >=1.5
-    , tinylog >=0.14
-    , transformers-base >=0.4
-    , types-common >=0.11
-    , unordered-containers >=0.2
-    , uuid >=1.3
-    , vector >=0.10
-  default-language: Haskell2010
+    , iso639                 >=0.1
+    , memory                 >=0.12
+    , metrics-core           >=0.1.17
+    , mime                   >=0.4
+    , monad-control          >=1.0
+    , mwc-random             >=0.13
+    , optparse-applicative   >=0.11
+    , resource-pool          >=0.2
+    , stm                    >=2.4
+    , text                   >=0.11
+    , time                   >=1.5
+    , tinylog                >=0.14
+    , transformers-base      >=0.4
+    , types-common           >=0.11
+    , unordered-containers   >=0.2
+    , uuid                   >=1.3
+    , vector                 >=0.10
+
+  default-language:   Haskell2010
