--- a/libs/api-client/api-client.cabal
+++ b/libs/api-client/api-client.cabal
@@ -1,100 +1,102 @@
 cabal-version: 1.12
-
-
-name:           api-client
-version:        0.4.2
-synopsis:       (Internal) Wire HTTP API Client
-description:    An (internal) client library for the Wire HTTP API.
-category:       Network
-stability:      experimental
-author:         Wire Swiss GmbH
-maintainer:     Wire Swiss GmbH <backend@wire.com>
-license:        AGPL-3
-license-file:   LICENSE
-build-type:     Simple
+name:          api-client
+version:       0.4.2
+synopsis:      (Internal) Wire HTTP API Client
+description:   An (internal) client library for the Wire HTTP API.
+category:      Network
+stability:     experimental
+author:        Wire Swiss GmbH
+maintainer:    Wire Swiss GmbH <backend@wire.com>
+license:       AGPL-3
+license-file:  LICENSE
+build-type:    Simple
 
 library
   exposed-modules:
-      Network.Wire.Client
-      Network.Wire.Client.API.Asset
-      Network.Wire.Client.API.Auth
-      Network.Wire.Client.API.Client
-      Network.Wire.Client.API.Conversation
-      Network.Wire.Client.API.Push
-      Network.Wire.Client.API.Search
-      Network.Wire.Client.API.User
-      Network.Wire.Client.HTTP
-      Network.Wire.Client.Monad
-      Network.Wire.Client.Session
-  other-modules:
-      Paths_api_client
-  hs-source-dirs:
-      src
+    Network.Wire.Client
+    Network.Wire.Client.API.Asset
+    Network.Wire.Client.API.Auth
+    Network.Wire.Client.API.Client
+    Network.Wire.Client.API.Conversation
+    Network.Wire.Client.API.Push
+    Network.Wire.Client.API.Search
+    Network.Wire.Client.API.User
+    Network.Wire.Client.HTTP
+    Network.Wire.Client.Monad
+    Network.Wire.Client.Session
+
+  other-modules:      Paths_api_client
+  hs-source-dirs:     src
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+
   build-depends:
-      aeson >=2.0.1.0
-    , async >=2.0
-    , base >=4.6 && <5
-    , bilge >=0.21
-    , bytestring >=0.10
-    , bytestring-conversion >=0.2
-    , connection >=0.2
-    , cookie >=0.4
-    , data-default-class >=0.0
-    , errors >=2.1
-    , exceptions >=0.8
-    , http-client >=0.4
-    , http-types >=0.8
+      aeson                  >=2.0.1.0
+    , async                  >=2.0
+    , base                   >=4.6     && <5
+    , bilge                  >=0.21
+    , bytestring             >=0.10
+    , bytestring-conversion  >=0.2
+    , connection             >=0.2
+    , cookie                 >=0.4
+    , data-default-class     >=0.0
+    , errors                 >=2.1
+    , exceptions             >=0.8
+    , http-client            >=0.4
+    , http-types             >=0.8
     , imports
-    , mime >=0.4
-    , retry >=0.7
-    , text >=1.2
-    , time >=1.5
-    , tinylog >=0.14
-    , transformers >=0.3
-    , types-common >=0.16
+    , mime                   >=0.4
+    , retry                  >=0.7
+    , text                   >=1.2
+    , time                   >=1.5
+    , tinylog                >=0.14
+    , transformers           >=0.3
+    , types-common           >=0.16
     , unliftio
-    , unordered-containers >=0.2
-    , uuid >=1.3
-    , websockets >=0.9
-    , wire-api >=0.1
-  default-language: Haskell2010
+    , unordered-containers   >=0.2
+    , uuid                   >=1.3
+    , websockets             >=0.9
+    , wire-api               >=0.1
+
+  default-language:   Haskell2010
