--- a/libs/zauth/zauth.cabal
+++ b/libs/zauth/zauth.cabal
@@ -1,134 +1,138 @@
-cabal-version: 1.12
-
-
-name:           zauth
-version:        0.10.3
-synopsis:       Creation and validation of signed tokens.
-description:    Creation and validation of signed tokens.
-category:       Data
-stability:      experimental
-author:         Wire Swiss GmbH
-maintainer:     Wire Swiss GmbH <backend@wire.com>
-copyright:      (c) 2017 Wire Swiss GmbH
-license:        AGPL-3
-license-file:   LICENSE
-build-type:     Simple
-extra-source-files:
-    README.md
+cabal-version:      1.12
+name:               zauth
+version:            0.10.3
+synopsis:           Creation and validation of signed tokens.
+description:        Creation and validation of signed tokens.
+category:           Data
+stability:          experimental
+author:             Wire Swiss GmbH
+maintainer:         Wire Swiss GmbH <backend@wire.com>
+copyright:          (c) 2017 Wire Swiss GmbH
+license:            AGPL-3
+license-file:       LICENSE
+build-type:         Simple
+extra-source-files: README.md
 
 library
   exposed-modules:
-      Data.ZAuth.Creation
-      Data.ZAuth.Token
-      Data.ZAuth.Validation
-  other-modules:
-      Paths_zauth
-  hs-source-dirs:
-      src
+    Data.ZAuth.Creation
+    Data.ZAuth.Token
+    Data.ZAuth.Validation
+
+  other-modules:      Paths_zauth
+  hs-source-dirs:     src
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path -funbox-strict-fields
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    -funbox-strict-fields
+
   build-depends:
-      attoparsec >=0.11
-    , base >=4.6 && <5
-    , base64-bytestring >=1.0
-    , bytestring >=0.10.2
-    , bytestring-conversion >=0.1.1
-    , errors >=2.0
-    , exceptions >=0.4
+      attoparsec             >=0.11
+    , base                   >=4.6    && <5
+    , base64-bytestring      >=1.0
+    , bytestring             >=0.10.2
+    , bytestring-conversion  >=0.1.1
+    , errors                 >=2.0
+    , exceptions             >=0.4
     , imports
-    , lens >=4.4
-    , mtl >=2.2
-    , mwc-random >=0.12
-    , sodium-crypto-sign >=0.1
-    , time >=1.4
-    , uuid >=1.3
-    , vector >=0.10
-  default-language: Haskell2010
+    , lens                   >=4.4
+    , mtl                    >=2.2
+    , mwc-random             >=0.12
+    , sodium-crypto-sign     >=0.1
+    , time                   >=1.4
+    , uuid                   >=1.3
+    , vector                 >=0.10
+
+  default-language:   Haskell2010
 
 executable zauth
-  main-is: Main.hs
-  other-modules:
-      Paths_zauth
-  hs-source-dirs:
-      main
+  main-is:            Main.hs
+  other-modules:      Paths_zauth
+  hs-source-dirs:     main
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+
   build-depends:
       base
     , base64-bytestring
@@ -137,61 +141,66 @@ executable zauth
     , errors
     , imports
     , lens
-    , optparse-applicative >=0.11
+    , optparse-applicative   >=0.11
     , sodium-crypto-sign
     , uuid
     , zauth
-  default-language: Haskell2010
+
+  default-language:   Haskell2010
 
 test-suite zauth-unit
-  type: exitcode-stdio-1.0
-  main-is: Unit.hs
+  type:               exitcode-stdio-1.0
+  main-is:            Unit.hs
   other-modules:
-      Arbitraries
-      ZAuth
-      Paths_zauth
-  hs-source-dirs:
-      test
+    Arbitraries
+    Paths_zauth
+    ZAuth
+
+  hs-source-dirs:     test
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+
   build-depends:
       base
     , bytestring
@@ -200,9 +209,10 @@ test-suite zauth-unit
     , imports
     , lens
     , sodium-crypto-sign
-    , tasty >=0.9
-    , tasty-hunit >=0.9
-    , tasty-quickcheck >=0.8
+    , tasty                  >=0.9
+    , tasty-hunit            >=0.9
+    , tasty-quickcheck       >=0.8
     , uuid
     , zauth
-  default-language: Haskell2010
+
+  default-language:   Haskell2010
