--- a/services/cannon/cannon.cabal
+++ b/services/cannon/cannon.cabal
@@ -1,309 +1,330 @@
 cabal-version: 1.12
-
-
-name:           cannon
-version:        0.31.0
-synopsis:       Push Notification API
-description:    Push Notification API Service.
-category:       Network
-author:         Wire Swiss GmbH
-maintainer:     Wire Swiss GmbH <backend@wire.com>
-copyright:      (c) 2017 Wire Swiss GmbH
-license:        AGPL-3
-license-file:   LICENSE
-build-type:     Simple
+name:          cannon
+version:       0.31.0
+synopsis:      Push Notification API
+description:   Push Notification API Service.
+category:      Network
+author:        Wire Swiss GmbH
+maintainer:    Wire Swiss GmbH <backend@wire.com>
+copyright:     (c) 2017 Wire Swiss GmbH
+license:       AGPL-3
+license-file:  LICENSE
+build-type:    Simple
 
 flag static
   description: Enable static linking
-  manual: True
-  default: False
+  manual:      True
+  default:     False
 
 library
   exposed-modules:
-      Cannon.API.Internal
-      Cannon.API.Public
-      Cannon.App
-      Cannon.Dict
-      Cannon.Options
-      Cannon.Run
-      Cannon.Types
-      Cannon.WS
-      Main
-  other-modules:
-      Paths_cannon
-  hs-source-dirs:
-      src
+    Cannon.API.Internal
+    Cannon.API.Public
+    Cannon.App
+    Cannon.Dict
+    Cannon.Options
+    Cannon.Run
+    Cannon.Types
+    Cannon.WS
+    Main
+
+  other-modules:      Paths_cannon
+  hs-source-dirs:     src
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+
   build-depends:
-      aeson >=2.0.1.0
-    , api-field-json-th >=0.1.0.2
-    , async >=2.0
-    , base >=4.6 && <5
-    , bilge >=0.12
-    , bytestring >=0.10
-    , bytestring-conversion >=0.2
-    , conduit >=1.3.4.2
-    , data-default >=0.5
-    , data-timeout >=0.3
-    , exceptions >=0.6
+      aeson                  >=2.0.1.0
+    , api-field-json-th      >=0.1.0.2
+    , async                  >=2.0
+    , base                   >=4.6     && <5
+    , bilge                  >=0.12
+    , bytestring             >=0.10
+    , bytestring-conversion  >=0.2
+    , conduit                >=1.3.4.2
+    , data-default           >=0.5
+    , data-timeout           >=0.3
+    , exceptions             >=0.6
     , extended
     , extra
     , gundeck-types
-    , hashable >=1.2
-    , http-types >=0.8
+    , hashable               >=1.2
+    , http-types             >=0.8
     , imports
-    , lens >=4.4
-    , lens-family-core >=1.1
-    , metrics-wai >=0.4
-    , mwc-random >=0.13
-    , retry >=0.7
+    , lens                   >=4.4
+    , lens-family-core       >=1.1
+    , metrics-wai            >=0.4
+    , mwc-random             >=0.13
+    , retry                  >=0.7
     , safe-exceptions
     , servant
     , servant-conduit
     , servant-server
-    , strict >=0.3.2
-    , swagger >=0.2
-    , text >=1.1
-    , tinylog >=0.10
-    , types-common >=0.16
+    , strict                 >=0.3.2
+    , swagger                >=0.2
+    , text                   >=1.1
+    , tinylog                >=0.10
+    , types-common           >=0.16
     , unix
     , unliftio
-    , uuid >=1.3
-    , vector >=0.10
-    , wai >=3.0
-    , wai-extra >=3.0
-    , wai-predicates >=0.8
-    , wai-utilities >=0.11
-    , wai-websockets >=3.0
-    , warp >=3.0
-    , websockets >=0.11.2
+    , uuid                   >=1.3
+    , vector                 >=0.10
+    , wai                    >=3.0
+    , wai-extra              >=3.0
+    , wai-predicates         >=0.8
+    , wai-utilities          >=0.11
+    , wai-websockets         >=3.0
+    , warp                   >=3.0
+    , websockets             >=0.11.2
     , wire-api
-  default-language: Haskell2010
+
+  default-language:   Haskell2010
 
 executable cannon
-  main-is: src/Main.hs
-  other-modules:
-      Paths_cannon
+  main-is:            src/Main.hs
+  other-modules:      Paths_cannon
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T -with-rtsopts=-M1g -with-rtsopts=-ki4k
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
+    -with-rtsopts=-M1g -with-rtsopts=-ki4k
+
   build-depends:
       base
     , cannon
     , extended
     , imports
     , types-common
+
   if flag(static)
     ld-options: -static
-  default-language: Haskell2010
+
+  default-language:   Haskell2010
 
 test-suite cannon-tests
-  type: exitcode-stdio-1.0
-  main-is: Main.hs
+  type:               exitcode-stdio-1.0
+  main-is:            Main.hs
   other-modules:
-      Test.Cannon.Dict
-      Paths_cannon
-  hs-source-dirs:
-      test
+    Paths_cannon
+    Test.Cannon.Dict
+
+  hs-source-dirs:     test
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path -threaded -with-rtsopts=-N
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    -threaded -with-rtsopts=-N
+
   build-depends:
-      QuickCheck >=2.7
-    , async
+      async
     , base
     , bytestring
     , cannon
-    , criterion >=1.0
+    , criterion         >=1.0
     , extended
     , imports
     , metrics-wai
-    , random >=1.0
-    , tasty >=0.8
-    , tasty-hunit >=0.8
-    , tasty-quickcheck >=0.8
+    , QuickCheck        >=2.7
+    , random            >=1.0
+    , tasty             >=0.8
+    , tasty-hunit       >=0.8
+    , tasty-quickcheck  >=0.8
     , types-common
     , uuid
     , wai-utilities
     , wire-api
-  default-language: Haskell2010
+
+  default-language:   Haskell2010
 
 benchmark cannon-bench
-  type: exitcode-stdio-1.0
-  main-is: Main.hs
+  type:               exitcode-stdio-1.0
+  main-is:            Main.hs
   other-modules:
-      Bench
-      Paths_cannon
-  hs-source-dirs:
-      bench
+    Bench
+    Paths_cannon
+
+  hs-source-dirs:     bench
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path -threaded -with-rtsopts=-N
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    -threaded -with-rtsopts=-N
+
   build-depends:
-      QuickCheck >=2.7
-    , async
+      async
     , base
     , bytestring
     , cannon
-    , criterion >=1.0
+    , criterion         >=1.0
     , extended
     , imports
     , metrics-wai
-    , random >=1.0
-    , tasty >=0.8
-    , tasty-hunit >=0.8
-    , tasty-quickcheck >=0.8
+    , QuickCheck        >=2.7
+    , random            >=1.0
+    , tasty             >=0.8
+    , tasty-hunit       >=0.8
+    , tasty-quickcheck  >=0.8
     , types-common
     , uuid
     , wai-utilities
-  default-language: Haskell2010
+
+  default-language:   Haskell2010
