--- a/services/proxy/proxy.cabal
+++ b/services/proxy/proxy.cabal
@@ -1,155 +1,164 @@
 cabal-version: 1.12
-
-
-name:           proxy
-version:        0.9.0
-description:    3rd party proxy
-category:       Network
-author:         Wire Swiss GmbH
-maintainer:     Wire Swiss GmbH <backend@wire.com>
-copyright:      (c) 2017 Wire Swiss GmbH
-license:        AGPL-3
-license-file:   LICENSE
-build-type:     Simple
+name:          proxy
+version:       0.9.0
+description:   3rd party proxy
+category:      Network
+author:        Wire Swiss GmbH
+maintainer:    Wire Swiss GmbH <backend@wire.com>
+copyright:     (c) 2017 Wire Swiss GmbH
+license:       AGPL-3
+license-file:  LICENSE
+build-type:    Simple
 
 flag static
   description: Enable static linking
-  manual: True
-  default: False
+  manual:      True
+  default:     False
 
 library
   exposed-modules:
-      Main
-      Proxy.API
-      Proxy.API.Public
-      Proxy.Env
-      Proxy.Options
-      Proxy.Proxy
-      Proxy.Run
-  other-modules:
-      Paths_proxy
-  hs-source-dirs:
-      src
+    Main
+    Proxy.API
+    Proxy.API.Public
+    Proxy.Env
+    Proxy.Options
+    Proxy.Proxy
+    Proxy.Run
+
+  other-modules:      Paths_proxy
+  hs-source-dirs:     src
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path -funbox-strict-fields
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    -funbox-strict-fields
+
   build-depends:
-      aeson >=2.0.1.0
-    , base >=4.6 && <5
-    , bilge >=0.21
-    , bytestring >=0.10
-    , case-insensitive >=1.2
-    , configurator >=0.3
-    , data-default >=0.5
-    , exceptions >=0.8
+      aeson               >=2.0.1.0
+    , base                >=4.6     && <5
+    , bilge               >=0.21
+    , bytestring          >=0.10
+    , case-insensitive    >=1.2
+    , configurator        >=0.3
+    , data-default        >=0.5
+    , exceptions          >=0.8
     , extended
-    , http-client >=0.4
-    , http-client-tls >=0.2
-    , http-reverse-proxy >=0.4
-    , http-types >=0.9
+    , http-client         >=0.4
+    , http-client-tls     >=0.2
+    , http-reverse-proxy  >=0.4
+    , http-types          >=0.9
     , imports
-    , lens >=4.11
-    , metrics-wai >=0.5
-    , retry >=0.7
-    , text >=1.2
-    , tinylog >=0.12
-    , types-common >=0.8
+    , lens                >=4.11
+    , metrics-wai         >=0.5
+    , retry               >=0.7
+    , text                >=1.2
+    , tinylog             >=0.12
+    , types-common        >=0.8
     , unliftio-core
-    , wai >=3.2
-    , wai-predicates >=0.8
-    , wai-routing >=0.12
-    , wai-utilities >=0.14.3
-    , warp >=3.0
+    , wai                 >=3.2
+    , wai-predicates      >=0.8
+    , wai-routing         >=0.12
+    , wai-utilities       >=0.14.3
+    , warp                >=3.0
     , wire-api
-  default-language: Haskell2010
+
+  default-language:   Haskell2010
 
 executable proxy
-  main-is: src/Main.hs
-  other-modules:
-      Paths_proxy
+  main-is:            src/Main.hs
+  other-modules:      Paths_proxy
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path -threaded -rtsopts -with-rtsopts=-T
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    -threaded -rtsopts -with-rtsopts=-T
+
   build-depends:
       base
     , extended
     , imports
     , proxy
     , types-common
+
   if flag(static)
     ld-options: -static
-  default-language: Haskell2010
+
+  default-language:   Haskell2010
