--- a/tools/api-simulations/api-simulations.cabal
+++ b/tools/api-simulations/api-simulations.cabal
@@ -1,214 +1,228 @@
 cabal-version: 1.12
+name:          api-simulations
+version:       0.4.2
+synopsis:      (Internal) Wire API simulations
+description:
+  (Internal) Wire API simulations using bots (automated users and clients).
 
-
-name:           api-simulations
-version:        0.4.2
-synopsis:       (Internal) Wire API simulations
-description:    (Internal) Wire API simulations using bots (automated users and clients).
-category:       Network
-stability:      experimental
-author:         Wire Swiss GmbH
-maintainer:     Wire Swiss GmbH <backend@wire.com>
-license:        AGPL-3
-license-file:   LICENSE
-build-type:     Simple
+category:      Network
+stability:     experimental
+author:        Wire Swiss GmbH
+maintainer:    Wire Swiss GmbH <backend@wire.com>
+license:       AGPL-3
+license-file:  LICENSE
+build-type:    Simple
 
 library
-  exposed-modules:
-      Network.Wire.Simulations
-  other-modules:
-      Paths_api_simulations
-  hs-source-dirs:
-      lib/src
+  exposed-modules:    Network.Wire.Simulations
+  other-modules:      Paths_api_simulations
+  hs-source-dirs:     lib/src
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+
   build-depends:
       api-bot
     , api-client
-    , base >=4.6
-    , bytestring >=0.10
-    , bytestring-conversion >=0.3
-    , cereal >=0.5
-    , containers >=0.5
-    , exceptions >=0.8
+    , base                   >=4.6
+    , bytestring             >=0.10
+    , bytestring-conversion  >=0.3
+    , cereal                 >=0.5
+    , containers             >=0.5
+    , exceptions             >=0.8
     , imports
-    , lens >=4.14
-    , text >=0.11
-    , types-common >=0.4.7
-  default-language: Haskell2010
+    , lens                   >=4.14
+    , text                   >=0.11
+    , types-common           >=0.4.7
+
+  default-language:   Haskell2010
 
 executable api-loadtest
-  main-is: Main.hs
+  main-is:            Main.hs
   other-modules:
-      Network.Wire.Simulations.LoadTest
-      Paths_api_simulations
-  hs-source-dirs:
-      loadtest/src
+    Network.Wire.Simulations.LoadTest
+    Paths_api_simulations
+
+  hs-source-dirs:     loadtest/src
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path -threaded -with-rtsopts=-N -with-rtsopts=-T
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    -threaded -with-rtsopts=-N -with-rtsopts=-T
+
   build-depends:
       api-bot
     , api-client
     , api-simulations
     , base
-    , bytestring >=0.10
-    , bytestring-conversion >=0.3
-    , containers >=0.5
-    , exceptions >=0.8
+    , bytestring             >=0.10
+    , bytestring-conversion  >=0.3
+    , containers             >=0.5
+    , exceptions             >=0.8
     , extended
-    , http-client >=0.4
-    , http-client-tls >=0.2
+    , http-client            >=0.4
+    , http-client-tls        >=0.2
     , imports
-    , metrics-core >=0.1
-    , mime >=0.4
-    , mwc-random >=0.13
-    , text >=1.2
-    , tinylog >=0.14
-    , types-common >=0.11
-    , unliftio >=0.2.10
-    , uuid >=1.3
-  default-language: Haskell2010
+    , metrics-core           >=0.1
+    , mime                   >=0.4
+    , mwc-random             >=0.13
+    , text                   >=1.2
+    , tinylog                >=0.14
+    , types-common           >=0.11
+    , unliftio               >=0.2.10
+    , uuid                   >=1.3
+
+  default-language:   Haskell2010
 
 executable api-smoketest
-  main-is: Main.hs
+  main-is:            Main.hs
   other-modules:
-      Network.Wire.Simulations.SmokeTest
-      Paths_api_simulations
-  hs-source-dirs:
-      smoketest/src
+    Network.Wire.Simulations.SmokeTest
+    Paths_api_simulations
+
+  hs-source-dirs:     smoketest/src
   default-extensions:
-      AllowAmbiguousTypes
-      BangPatterns
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DerivingStrategies
-      DerivingVia
-      DeriveFunctor
-      DeriveGeneric
-      DeriveLift
-      DeriveTraversable
-      EmptyCase
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PackageImports
-      PatternSynonyms
-      PolyKinds
-      QuasiQuotes
-      RankNTypes
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeApplications
-      TypeFamilies
-      TypeFamilyDependencies
-      TypeOperators
-      UndecidableInstances
-      ViewPatterns
-  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path -threaded -with-rtsopts=-N -with-rtsopts=-T
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
+
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    -threaded -with-rtsopts=-N -with-rtsopts=-T
+
   build-depends:
       api-bot
     , api-client
     , api-simulations
     , base
-    , bytestring >=0.10
-    , bytestring-conversion >=0.3
-    , containers >=0.5
-    , exceptions >=0.8
-    , http-client >=0.4
-    , http-client-tls >=0.2
+    , bytestring             >=0.10
+    , bytestring-conversion  >=0.3
+    , containers             >=0.5
+    , exceptions             >=0.8
+    , http-client            >=0.4
+    , http-client-tls        >=0.2
     , imports
-    , lens >=4.1
-    , mime >=0.4
-    , optparse-applicative >=0.11
-    , text >=1.2
-    , tinylog >=0.14
-    , types-common >=0.11
+    , lens                   >=4.1
+    , mime                   >=0.4
+    , optparse-applicative   >=0.11
+    , text                   >=1.2
+    , tinylog                >=0.14
+    , types-common           >=0.11
     , unliftio
-  default-language: Haskell2010
+
+  default-language:   Haskell2010
