--- a/tools/db/assets/assets.cabal
+++ b/tools/db/assets/assets.cabal
@@ -1,93 +1,103 @@
-cabal-version:  2.4
-name:           assets
-version:        1.0.0
-synopsis:       Scan the brig user table, search for malformatted asset keys and print them
-category:       Network
-author:         Wire Swiss GmbH
-maintainer:     Wire Swiss GmbH <backend@wire.com>
-copyright:      (c) 2022 Wire Swiss GmbH
-license:        AGPL-3.0-only
-build-type:     Simple
+cabal-version: 2.4
+name:          assets
+version:       1.0.0
+synopsis:
+  Scan the brig user table, search for malformatted asset keys and print them
+
+category:      Network
+author:        Wire Swiss GmbH
+maintainer:    Wire Swiss GmbH <backend@wire.com>
+copyright:     (c) 2022 Wire Swiss GmbH
+license:       AGPL-3.0-only
+build-type:    Simple
 
 library
-    hs-source-dirs: src
-    exposed-modules:
-        Assets.Lib
-    ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path -funbox-strict-fields -threaded -with-rtsopts=-N
-    build-depends:
-        aeson
-        , base
-        , brig
-        , brig-types
-        , bytestring
-        , cassandra-util
-        , conduit
-        , containers
-        , filepath
-        , galley
-        , imports
-        , iproute
-        , lens
-        , megaparsec
-        , optparse-applicative
-        , process
-        , raw-strings-qq
-        , stache
-        , bytestring-conversion
-        , text
-        , time
-        , tinylog
-        , types-common
-        , uuid
-        , vector
-        , wire-api
-        , attoparsec
+  hs-source-dirs:     src
+  exposed-modules:    Assets.Lib
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    -funbox-strict-fields -threaded -with-rtsopts=-N
+
+  build-depends:
+    , aeson
+    , attoparsec
+    , base
+    , brig
+    , brig-types
+    , bytestring
+    , bytestring-conversion
+    , cassandra-util
+    , conduit
+    , containers
+    , filepath
+    , galley
+    , imports
+    , iproute
+    , lens
+    , megaparsec
+    , optparse-applicative
+    , process
+    , raw-strings-qq
+    , stache
+    , text
+    , time
+    , tinylog
+    , types-common
+    , uuid
+    , vector
+    , wire-api
+
   default-extensions:
-        AllowAmbiguousTypes
-        BangPatterns
-        ConstraintKinds
-        DataKinds
-        DefaultSignatures
-        DerivingStrategies
-        DerivingVia
-        DeriveFunctor
-        DeriveGeneric
-        DeriveLift
-        DeriveTraversable
-        EmptyCase
-        FlexibleContexts
-        FlexibleInstances
-        FunctionalDependencies
-        GADTs
-        InstanceSigs
-        KindSignatures
-        LambdaCase
-        MultiParamTypeClasses
-        MultiWayIf
-        NamedFieldPuns
-        NoImplicitPrelude
-        OverloadedStrings
-        PackageImports
-        PatternSynonyms
-        PolyKinds
-        QuasiQuotes
-        RankNTypes
-        ScopedTypeVariables
-        StandaloneDeriving
-        TemplateHaskell
-        TupleSections
-        TypeApplications
-        TypeFamilies
-        TypeFamilyDependencies
-        TypeOperators
-        UndecidableInstances
-        ViewPatterns        
+    NoImplicitPrelude
+    AllowAmbiguousTypes
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    InstanceSigs
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NamedFieldPuns
+    OverloadedStrings
+    PackageImports
+    PatternSynonyms
+    PolyKinds
+    QuasiQuotes
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    TemplateHaskell
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeFamilyDependencies
+    TypeOperators
+    UndecidableInstances
+    ViewPatterns
 
 executable assets
-    main-is:          Main.hs
-    build-depends:
-          base
-        , assets
-    hs-source-dirs:   app
-    default-language: Haskell2010
-    ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path -funbox-strict-fields -threaded -with-rtsopts=-N
+  main-is:          Main.hs
+  build-depends:
+    , assets
+    , base
+
+  hs-source-dirs:   app
+  default-language: Haskell2010
+  ghc-options:
+    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
+    -funbox-strict-fields -threaded -with-rtsopts=-N
