--- a/tools/rex/rex.cabal
+++ b/tools/rex/rex.cabal
@@ -1,31 +1,28 @@
-cabal-version:       >=1.10
-
-name:                rex
-version:             0.3.0
-synopsis:            Scrape and expose restund metrics for prometheus
-description:         @rex@ = @restund-exporter@ in prometheus jargon
-category:            Network
-author:              Wire Swiss GmbH
-maintainer:          Wire Swiss GmbH <backend@wire.com>
-license:             AGPL-3
-license-file:        LICENSE
-build-type:          Simple
+cabal-version: >=1.10
+name:          rex
+version:       0.3.0
+synopsis:      Scrape and expose restund metrics for prometheus
+description:   @rex@ = @restund-exporter@ in prometheus jargon
+category:      Network
+author:        Wire Swiss GmbH
+maintainer:    Wire Swiss GmbH <backend@wire.com>
+license:       AGPL-3
+license-file:  LICENSE
+build-type:    Simple
 
 flag static
-    Description: Enable static linking
-    Default:     False
+  description: Enable static linking
+  default:     False
 
 executable rex
-  main-is:
-    Main.hs
-
+  main-is:          Main.hs
   build-depends:
       async
     , attoparsec
-    , base           == 4.*
+    , base                  >=4     && <5
     , bytestring
     , clock
-    , dns            >= 2.0.8
+    , dns                   >=2.0.8
     , exceptions
     , http-types
     , iproute
@@ -39,11 +36,9 @@ executable rex
     , wai
     , warp
 
-  ghc-options:
-    -Wall -O1 -funbox-small-strict-fields
+  ghc-options:      -Wall -O1 -funbox-small-strict-fields
 
   if flag(static)
     ld-options: -static
 
-  default-language:
-    Haskell2010
+  default-language: Haskell2010
